changes to book template

--- a/views/book.pug
+++ b/views/book.pug
@@ -12,12 +12,10 @@ block content
         li #{genre}
 
     hr
-    //- //- If user logged in
-    //- if user
-    //-     //- Hide edit and delete unless book was posted by current user
-    //-     if user._id == book.posted_by
-    //-         //- Link to edit book
-    a.btn.btn-default(href="/book/edit/" + book._id) Edit Book
-    br
-    //- Link to delete book
-    a.btn.delete-book(href="#", data-id=book._id) Delete Book
+    if user
+        if user._id == book.posted_by
+
+            a.btn.btn-default(href="/book/edit/" + book._id) Edit Book
+            br
+
+            a.btn.delete-book(href="#", data-id=book._id) Delete Book
